--- a/package.json
+++ b/package.json
@@ -151,10 +151,15 @@
     "@angular/platform-browser-dynamic": "^4.3.0",
     "@angular/router": "^4.3.0",
     "@angular/service-worker": "^1.0.0-beta.16",
+    "angular-4-data-table": "^0.2.3",
+    "angular-froala-wysiwyg": "^2.6.6",
     "angular2-google-map": "^0.1.8",
+    "angular2-tinymce": "^2.1.2",
     "angular4-color-picker": "^1.4.2",
     "core-js": "^2.4.1",
     "intl": "^1.2.5",
+    "ng2-flex-table": "^1.1.2",
+    "ng2-smart-table": "^1.2.2",
     "rxjs": "^5.4.2",
     "systemjs": "0.20.14",
     "zone.js": "0.8.12"
