--- a/package.json
+++ b/package.json
@@ -161,6 +161,7 @@
     "jquery": "^3.2.1",
     "ng2-flex-table": "^1.1.2",
     "ng2-smart-table": "^1.2.2",
+    "ngx-bootstrap": "^1.9.3",
     "rxjs": "^5.4.2",
     "systemjs": "0.20.14",
     "zone.js": "0.8.12"
